<resources>
    <string name="app_name">SmartLock Sample</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sample_with_google_sign_in">Sample with Google Sign In</string>
    <string name="ordinary_sample">Common sample</string>
    <string name="click_to_sign_in_with_google">Click to sign in with Google</string>
    <string name="google_sign_in_status_initial_text">Click in the bottom button to start</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_pick_profile_picture">Click to select your profile picture</string>
    <string name="sign_out">Sign out</string>
    <string name="credentials_deleted_message">Your credentials have been deleted</string>
    <string name="google_sign_in_required">Sign in required, please click the sign in button</string>
    <string name="progress_message">Loading…</string>
</resources>
