<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.GoogleSignInFragment">

    <TextView
        android:id="@+id/statusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/google_sign_in_status_initial_text" />

    <Button
        android:id="@+id/google_sample_signIn_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/click_to_sign_in_with_google" />

    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="127dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/google_sample_remove_credentials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/google_sample_signIn_button"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_out"
        android:visibility="gone"
        tools:visibility="visible" />

</RelativeLayout>
